fix(shared-base-button): fix label alignment on iOS 10

--- a/shared/components/BaseButton/BaseButton.modules.scss
+++ b/shared/components/BaseButton/BaseButton.modules.scss
@@ -92,3 +92,7 @@ $button-text-color: $color-white;
   align-items: center;
   justify-content: center;
 }
+
+.labelAlign {
+  width: 100%;
+}
